--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,35 +1,20 @@
-.button {
-  width: 153px;
-  height: 32px;
-  background-color: $btn-color;
-  border: none;
-  border-radius: 5px;
+.btn {
+  width: 139px;
+  height: 139px;
+  border-radius: 100%;
+  border: 1px solid #ececec;
+  background: rgba(255, 255, 255, 0);
+  padding: 44px 25px;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 15px;
+  line-height: 150%;
   text-align: center;
   text-transform: uppercase;
-  color: #ffffff;
-  transition: 0.5s all;
+  color: #ececec;
   &:hover {
-    box-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
-  }
-  &_main {
-    margin-top: 67px;
-    width: 300px;
-    height: 50px;
-    font-size: 16px;
-    line-height: 25px;
-    text-align: cente;
-  }
-  &_submit {
-    width: 100%;
-    height: 58px;
-    font-size: 16px;
-    color: #ffffff;
-  }
-  &_mini {
-    width: 135px;
-    height: 44px;
-    font-size: 14px;
+    color: #FFFFFF;;
+    background: #141313;
+    backdrop-filter: blur(5.5px);
+    border: none;
   }
 }
