--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -1,13 +1,15 @@
 .title {
   font-weight: 700;
-  font-size: 30px;
-  text-align: center;
-  color: #0d0d0d;
-  text-transform: uppercase;
-  &_left {
-    color: #fff;
-    font-size: 36px;
-    text-align: left;
-    line-height: 54px;
+  font-size: 32px;
+  line-height: 32px;
+  letter-spacing: -0.04em;
+  color: #141313;
+  &__name {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 39px;
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
+    color: #141313;
   }
 }
