--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,16 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap");
 @import "base/_mixins.scss";
 @import "base/_variables.scss";
 * {
-  font-family: "MuseoModerno", cursive;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
 }
 .container {
   position: relative;
-  padding: 0 20px;
-  max-width: 950px;
+  padding: 0 40px;
+  max-width: 1440px;
   margin: 0 auto;
 }
+hr {
+  margin: 30px 0;
+}
+@import "blocks/nav";
 @import "blocks/buttons.scss";
 @import "blocks/title";
-@import "blocks/_promo.scss";
+@import "blocks/header";
+@import "blocks/news";
 
 @import "media.scss";
