add section instagram

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,5 +24,8 @@ hr {
 @import "blocks/header";
 @import "blocks/news";
 @import "blocks/new-people";
+@import "blocks/textline";
+@import "blocks/models";
+@import "blocks/instagram";
 
 @import "media.scss";
