--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -17,6 +17,18 @@
     backdrop-filter: blur(5.5px);
     border: none;
   }
+  &__next {
+    display: block;
+    margin: 0 auto;
+    width: 59px;
+    height: 59px;
+    border: 1px solid #d1d1d1;
+    border-radius: 50%;
+    background-color: #fff;
+    &:hover {
+      border: 1px solid #141313;
+    }
+  }
 }
 
 .profil {
