--- a/src/sass/blocks/_new-people.scss
+++ b/src/sass/blocks/_new-people.scss
@@ -1,8 +1,8 @@
 .new-people {
   padding-top: 140px;
-  height: 686px;
   &__item {
     display: flex;
+    position: relative;
   }
   &__photo {
     width: 560px;
