--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -27,5 +27,7 @@ hr {
 @import "blocks/textline";
 @import "blocks/models";
 @import "blocks/instagram";
+@import "blocks/blog";
+@import "blocks/footer";
 
 @import "media.scss";
